Fix title spacing

--- a/styles/master.css
+++ b/styles/master.css
@@ -60,5 +60,5 @@ button:hover {
   border-style: solid;
   border-color: var(--lightmode-primary-2);
   margin: 0 -1rem 1rem;
-  padding-left: 1rem;
+  padding: 0 0 0.5rem 1rem;
 }
